[package]
name = "tokio-async-indeep"
version = "0.1.0"
authors = ["iamwwc <qaq1362211689@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.1", features= ["full"]}
futures = "0.3"
crossbeam = "0.7"